# chesstab

./: pyproject.toml  setup.cfg  setup.py
chesstab/: __init__.py  chessgames.py  chessgames_winedptchunk.py  chessgames_winedptmulti.py
chesstab/apsw/: chessapsw.py  chessapswdu.py  database.py  database_du.py  runchessapswdu.py
chesstab/basecore/: analysis.py  analysis_index.py  analysisds.py  cqlbase.py  cqlgames.py  database.py  fullposition.py  fullpositionds.py  rayfilter.py
chesstab/berkeleydb/: chessberkeleydb.py  chessberkeleydbdu.py  database.py  database_du.py  runchessberkeleydbdu.py
chesstab/core/: analysis.py  chessrecord.py  constants.py  count_export.py  cqlcontainer.py  cqlevaluator.py  cqlnode.py  cqlstatement.py  database_pgn_parser.py  engine.py  enginecommands.py  export_chessql.py  export_game.py  export_repertoire.py  exporters.py  filespec.py  filtermap.py  game_database.py  lexer.py  pgn.py  querystatement.py  uci.py  uci_to_pgn.py  utilities.py
chesstab/cql/: querycontainer.py  queryevaluator.py  runcql.py
chesstab/db/: chessdb.py  chessdbdu.py  database.py  database_du.py  runchessdbdu.py
chesstab/db_tkinter/: chessdbtkinter.py  chessdbtkinterdu.py  database.py  database_du.py
chesstab/dpt/: __init__.py  analysisds.py  chessdpt.py  chessdptdu.py  chessdptdumulti.py  database.py  database_du.py  database_one_step_du.py  dptnofistat.py  fullpositionds.py  reloaddu.py  runchessdptdu.py  runchessdptduchunk.py  runchessdptdumulti.py
chesstab/fonts/: LEEME__S.TXT  README_S.TXT
chesstab/gnu/: chessgnu.py  (+4 more)
pylint/: pylint.conf
(+228 files in other folders)
