[metadata]
name = chesstab
version = 6.0.dev31
description = Database for chess games
author = Roger Marsh
author_email = roger.marsh@solentware.co.uk
url = http://www.solentware.co.uk
long_description = file: README
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Games/Entertainment :: Board Games
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Development Status :: 3 - Alpha

[options]
packages =
    chesstab
    chesstab.core
    chesstab.basecore
    chesstab.gui
    chesstab.help_
    chesstab.berkeleydb
    chesstab.db
    chesstab.dpt
    chesstab.sqlite
    chesstab.apsw
    chesstab.unqlite
    chesstab.vedis
    chesstab.gnu
    chesstab.ndbm
    chesstab.fonts
    chesstab.tools
    chesstab.samples
    chesstab.shared
install_requires =
    solentware-base==4.1.9.dev0
    chessql==2.0.5.dev0
    solentware-grid==2.1.7.dev0
    pgn-read==2.1.5.dev0
    solentware-misc==1.5.dev0
    uci-net==1.2.6.dev0

[options.package_data]
chesstab.fonts =
    *.TTF
    *.zip
chesstab.help = *.rst

[pycodestyle]
# E203 to fit black formatting and pylint.
# W503 is only default ignore which occurs at 2022-09-02, and style is what
# black formatting does if needed.
ignore=E203,W503
